[package]
name = "tanka-export"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
gtmpl = "0.5"
gtmpl_value = "0.5"
walkdir = "2.5"
rayon = "1.10"
jrsonnet-evaluator = "0.5.0-pre97"
jrsonnet-parser = "0.5.0-pre97"
jrsonnet-stdlib = "0.5.0-pre97"
jrsonnet-gcmodule = "=0.3.9"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "tanka-export"
path = "src/main.rs"

